closes #10 fixes info panel sizing on mobile fixes a bunch of small css issues on mobile and desktop

--- a/www/index.html
+++ b/www/index.html
@@ -111,8 +111,9 @@
 						</table>
 					</div>
 				</td>
+				<td id="sidebarToggle" class="fa fa-angle-double-right"></td>
 				<td id="sidebarWrapperCell">
-					<div id="sidebarWrapper"> 
+					<div id="sidebarWrapper" class="toggleOn"> 
 						<div id="viewListWrapper">
 							<div id="viewListHeader">views</div>
 							<div id="viewListEntries"></div>
